--- a/Build Pipeline.yml
+++ b/Build Pipeline.yml
@@ -33,6 +33,11 @@ steps:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
 
+- task: VSTest@2
+  inputs:
+    platform: '$(buildPlatform)'
+    configuration: '$(buildConfiguration)'
+
 - task: CopyFiles@2
   displayName: 'Stage Artifacts'
   inputs:
