--- a/build-steps.yml
+++ b/build-steps.yml
@@ -1,3 +1,11 @@
+variables:
+  solution: '**/*.sln'
+  buildPlatform: 'Any CPU'
+  buildConfiguration: 'Release'
+  PackageOutputPath: '$(build.artifactstagingdirectory)\Package'
+  propsFile: '.\Directory.Build.props'
+
+steps:
 - task: PowerShell@2
   displayName: 'Version Info'
   inputs:
