--- a/build-steps.yml
+++ b/build-steps.yml
@@ -11,8 +11,8 @@ steps:
   inputs:
     targetType: 'inline'
     script: |
-      $version = (Select-Xml -Path $(propsFile) -XPath "/Project/PropertyGroup/Version" | Select-Object -ExpandProperty Node).InnerText
-      $list = Select-Xml -Path $(propsFile) -XPath "/Project/PropertyGroup/*[starts-with(local-name(),'Unity')]"  | Select-Object -ExpandProperty Node
+      $version = (Select-Xml -Path ${{ parameters['propsFile'] }} -XPath "/Project/PropertyGroup/Version" | Select-Object -ExpandProperty Node).InnerText
+      $list = Select-Xml -Path ${{ parameters['propsFile'] }} -XPath "/Project/PropertyGroup/*[starts-with(local-name(),'Unity')]"  | Select-Object -ExpandProperty Node
       $timestamp = git log -1 --pretty="format:%ct"
       Write-Host "Version: $version" 
       if ([regex]::IsMatch($Env:BUILD_SOURCEBRANCH, "^(refs\/tags\/v)")) { 
@@ -33,7 +33,7 @@ steps:
   displayName: 'Restore'
   inputs:
     command: 'restore'
-    restoreSolution: '$(solution)'
+    restoreSolution: '${{ parameters['solution'] }}'
     feedsToUse: 'select'
     vstsFeed: '18a6243f-7dac-4c78-bb92-3af88cd8e255'
     verbosityRestore: 'Normal'
@@ -41,21 +41,21 @@ steps:
 - task: VSBuild@1
   displayName: 'Build'
   inputs:
-    solution: '$(solution)'
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
+    solution: '${{ parameters['solution'] }}'
+    platform: '${{ parameters['buildPlatform'] }}'
+    configuration: '${{ parameters['buildConfiguration'] }}'
 
 - task: VSTest@2
   displayName: 'Test'
   inputs:
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
+    platform: '${{ parameters['buildPlatform'] }}'
+    configuration: '${{ parameters['buildConfiguration'] }}'
     searchFolder: '$(system.defaultworkingdirectory)\tests'
 
 - task: PublishBuildArtifacts@1
   displayName: 'Stage Binaries'
   inputs:
-    PathtoPublish: 'src\bin\$(buildConfiguration)'
+    PathtoPublish: 'src\bin\${{ parameters['buildConfiguration'] }}'
     artifactName: 'Binaries'
 
 - task: PublishBuildArtifacts@1
