--- a/build-steps.yml
+++ b/build-steps.yml
@@ -3,7 +3,7 @@ parameters:
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
   PackageOutputPath: '$(build.artifactstagingdirectory)\Package'
-  propsFile: '.\Directory.Build.props'
+  properties: '.\Directory.Build.props'
 
 steps:
 
@@ -15,8 +15,8 @@ steps:
   inputs:
     targetType: 'inline'
     script: |
-      $version = (Select-Xml -Path ${{ parameters['propsFile'] }} -XPath "/Project/PropertyGroup/Version" | Select-Object -ExpandProperty Node).InnerText
-      $list = Select-Xml -Path ${{ parameters['propsFile'] }} -XPath "/Project/PropertyGroup/*[starts-with(local-name(),'Unity')]"  | Select-Object -ExpandProperty Node
+      $version = (Select-Xml -Path ${{ parameters.properties }} -XPath "/Project/PropertyGroup/Version" | Select-Object -ExpandProperty Node).InnerText
+      $list = Select-Xml -Path ${{ parameters.properties }} -XPath "/Project/PropertyGroup/*[starts-with(local-name(),'Unity')]"  | Select-Object -ExpandProperty Node
       $timestamp = git log -1 --pretty="format:%ct"
       Write-Host "Version: $version" 
       if ([regex]::IsMatch($Env:BUILD_SOURCEBRANCH, "^(refs\/tags\/v)")) { 
