--- a/build-steps.yml
+++ b/build-steps.yml
@@ -22,13 +22,13 @@ steps:
       if ([regex]::IsMatch($Env:BUILD_SOURCEBRANCH, "^(refs\/tags\/v)")) { 
           Write-Host "Package Version: $($version)" 
           foreach ($node in $list) { 
-            Write-Host "References $($node.Name.Substring(3)) $($node.InnerText)" 
+            Write-Host "References Unity.$($node.Name.Substring(8)) $($node.InnerText)" 
           }
       } Else { 
           Write-Host "Package Version: $($version)-$($timestamp)" 
           Write-Host "##vso[task.setvariable variable=VERSION_SUFFIX]-$($timestamp)" 
           foreach ($node in $list) { 
-            Write-Host "References $($node.Name.Substring(3)) $($node.InnerText)" 
+            Write-Host "References Unity.$($node.Name.Substring(8)) $($node.InnerText)" 
             Write-Host "##vso[task.setvariable variable=$($node.Name.Substring(3))Version]$($node.InnerText)" 
           }
       }
