--- a/build-steps.yml
+++ b/build-steps.yml
@@ -60,11 +60,11 @@ steps:
     configuration: ${{ parameters.buildConfiguration }}
     searchFolder: '$(system.defaultworkingdirectory)\tests'
 
-- task: PublishBuildArtifacts@1
-  displayName: 'Stage Binaries'
-  inputs:
-    PathtoPublish: ${{ format('src\bin\{0}', parameters.buildConfiguration) }}
-    artifactName: 'Binaries'
+#- task: PublishBuildArtifacts@1
+#  displayName: 'Stage Binaries'
+#  inputs:
+#    PathtoPublish: ${{ format('src\bin\{0}', parameters.buildConfiguration) }}
+#    artifactName: 'Binaries'
 
 - task: PublishBuildArtifacts@1
   displayName: 'Stage Package'
